--- a/bin/Makefile.in
+++ b/bin/Makefile.in
@@ -402,8 +402,7 @@ auto_edit = sed \
 	-e 's,@SENDMAIL\@,$(SENDMAIL),g' \
 	-e 's,@VERSION\@,$(VERSION),g' \
 	-e 's,@COPYYEARS\@,$(COPYYEARS),g' \
-	-e '/@copyright@/r ../COPYING' \
-	-e '/@copyright@/d'
+	-e '/@copyright@/r ../COPYING' -e '/@copyright@/d'
 
 all: all-am
 
@@ -862,7 +861,7 @@ uninstall-am: uninstall-binPROGRAMS uninstall-binSCRIPTS
 # XXX this is the generic version for the rest of bin_scripts that comes from
 #     configure.in now.  perhaps change to use this.
 #$(bin_SCRIPTS): Makefile $(top_builddir)/config.status
-$(bin_in:%.in=%): Makefile $(top_builddir)/config.status
+$(bin_in:%.in=%): Makefile $(top_builddir)/config.status $@.in
 	rm -f $@ $@.tmp; \
 	$(auto_edit) $(srcdir)/$@.in >$@.tmp; \
 	chmod +x $@.tmp; \
