That dependency solution did not work for the install target.  I think a depend target is the only way w/o specifying dependencies manually.  So, do it manually for now.
Also, include the copyright rather than doing it manually for hrancid, rancid,
and srancid.

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -79,15 +79,16 @@ auto_edit = sed \
 
 # XXX this is the generic version for the rest of bin_scripts that comes from
 #     configure.in now.  perhaps change to use this.
-#$(bin_SCRIPTS): Makefile $(top_builddir)/config.status
-$(bin_in:%.in=%): Makefile $(top_builddir)/config.status $@.in
+$(bin_in:%.in=%): Makefile $(top_builddir)/config.status ../COPYING
 	rm -f $@ $@.tmp; \
 	$(auto_edit) $(srcdir)/$@.in >$@.tmp; \
 	chmod +x $@.tmp; \
 	mv $@.tmp $@
 # XXX there must be a better way to produce these dependencies, perhaps in
-#     configure.
-plogin: $(srcdir)/plogin.in ../COPYING
+#     configure, but more likely need a depend target.
+hlogin: $(srcdir)/hlogin.in
+hrancid: $(srcdir)/hrancid.in
+plogin: $(srcdir)/plogin.in
 rancid: $(srcdir)/rancid.in
 
 lg.cgi: Makefile $(srcdir)/lg.cgi.in
