--- a/rancid/bin/alogin.in
+++ b/rancid/bin/alogin.in
@@ -401,7 +401,7 @@ proc login { router user userpswd passwd prompt cmethod cyphertype } {
 	denied		{ send_user "\nError: Check your passwd for $router\n"
 			  catch {close}; catch {wait}; return 1
 			}
-	"\r\n"		{ exp_continue; }
+	-re "\[^\r\n]*\[\r\n]+"		{ exp_continue; }
     }
   }
     set in_proc 0
