--- a/rancid/bin/mtlogin.in
+++ b/rancid/bin/mtlogin.in
@@ -73,17 +73,19 @@ proc login { router user userpswd passwd prompt cmethod cyphertype identfile } {
     # This helps cleanup each expect clause.
     expect_after {
 	timeout {
+	    global in_proc
 	    send_user "\nError: TIMEOUT reached\n"
 	    catch {close}; catch {wait};
-	    if { $in_proc} {
+	    if {$in_proc} {
 		return 1
 	    } else {
 		continue
 	    }
 	} eof {
+	    global in_proc
 	    send_user "\nError: EOF received\n"
 	    catch {close}; catch {wait};
-	    if { $in_proc} {
+	    if {$in_proc} {
 		return 1
 	    } else {
 		continue
