--- a/rancid/bin/panlogin.in
+++ b/rancid/bin/panlogin.in
@@ -377,17 +377,19 @@ proc login { router user userpswd passwd cmethod cyphertype identfile } {
 	# This helps cleanup each expect clause.
 	expect_after {
 	    timeout {
+		global in_proc
 		send_user "\nError: TIMEOUT reached\n"
 		catch {close}; wait
-		if { $in_proc} {
+		if {$in_proc} {
 		    return 1
 		} else {
 		    continue
 		}
 	    } eof {
+		global in_proc
 		send_user "\nError: EOF received\n"
 		catch {close}; wait
-		if { $in_proc} {
+		if {$in_proc} {
 		    return 1
 		} else {
 		    continue
