--- a/rancid/bin/Makefile.in
+++ b/rancid/bin/Makefile.in
@@ -98,13 +98,13 @@ DIST_COMMON = $(srcdir)/Makefile.am $(am__DIST_COMMON)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/include/config.h
 CONFIG_CLEAN_FILES = login_top control_rancid a10login agmrancid \
-	alogin arancid anlogin avologin avorancid blogin brancid \
-	brlogin cat5rancid clogin complogin cssrancid dllogin elogin \
-	erancid f5rancid f10rancid flogin fnlogin fnrancid hlogin \
-	htlogin htrancid jlogin jerancid mrancid mrvlogin mtrancid \
-	mtlogin nlogin nrancid nslogin nsrancid panlogin prancid \
-	rblogin rivlogin rivrancid rrancid rtftpcopy tlogin trancid \
-	xilogin xirancid xlogin ulogin wlogin zrancid
+	allogin alogin arancid anlogin avologin avorancid blogin \
+	brancid brlogin cat5rancid clogin complogin cssrancid dllogin \
+	elogin erancid f5rancid f10rancid flogin fnlogin fnrancid \
+	hlogin htlogin htrancid jlogin jerancid mrancid mrvlogin \
+	mtrancid mtlogin nlogin nrancid nslogin nsrancid panlogin \
+	prancid rblogin rivlogin rivrancid rrancid rtftpcopy tlogin \
+	trancid xilogin xirancid xlogin ulogin wlogin zrancid
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
@@ -197,8 +197,8 @@ am__define_uniq_tagged_files = \
 ETAGS = etags
 CTAGS = ctags
 am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/a10login.in \
-	$(srcdir)/agmrancid.in $(srcdir)/alogin.in \
-	$(srcdir)/anlogin.in $(srcdir)/arancid.in \
+	$(srcdir)/agmrancid.in $(srcdir)/allogin.in \
+	$(srcdir)/alogin.in $(srcdir)/anlogin.in $(srcdir)/arancid.in \
 	$(srcdir)/avologin.in $(srcdir)/avorancid.in \
 	$(srcdir)/blogin.in $(srcdir)/brancid.in $(srcdir)/brlogin.in \
 	$(srcdir)/cat5rancid.in $(srcdir)/clogin.in \
@@ -349,15 +349,15 @@ top_srcdir = @top_srcdir@
 
 #AUTOMAKE_OPTIONS=foreign no-dependencies
 AUTOMAKE_OPTIONS = foreign
-bin_SCRIPTS = a10login alogin agmrancid anlogin arancid avologin \
-	avorancid blogin brancid brlogin cat5rancid clogin complogin \
-	control_rancid cssrancid dllogin elogin erancid f5rancid \
-	f10rancid flogin fnlogin fnrancid hlogin hrancid htlogin \
-	htrancid jerancid jlogin mrancid mrvlogin mtlogin mtrancid \
-	nlogin nrancid nslogin nsrancid panlogin plogin rancid rblogin \
-	rivlogin rivrancid rrancid rtftpcopy srancid tlogin trancid \
-	ulogin wlogin xilogin xirancid xlogin zrancid lg.cgi \
-	lgform.cgi rancid-cvs rancid-fe rancid-run
+bin_SCRIPTS = a10login allogin alogin agmrancid anlogin arancid \
+	avologin avorancid blogin brancid brlogin cat5rancid clogin \
+	complogin control_rancid cssrancid dllogin elogin erancid \
+	f5rancid f10rancid flogin fnlogin fnrancid hlogin hrancid \
+	htlogin htrancid jerancid jlogin mrancid mrvlogin mtlogin \
+	mtrancid nlogin nrancid nslogin nsrancid panlogin plogin \
+	rancid rblogin rivlogin rivrancid rrancid rtftpcopy srancid \
+	tlogin trancid ulogin wlogin xilogin xirancid xlogin zrancid \
+	lg.cgi lgform.cgi rancid-cvs rancid-fe rancid-run
 # XXX hack for the rancid to get pkglibdir, see corresponding XXX below
 bin_in = hrancid.in plogin.in rancid.in srancid.in
 EXTRA_DIST = lg.cgi.in lgform.cgi.in rancid-cvs.in rancid-fe.in rancid-run.in \
@@ -444,6 +444,8 @@ control_rancid: $(top_builddir)/config.status $(srcdir)/control_rancid.in
 a10login: $(top_builddir)/config.status $(srcdir)/a10login.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 agmrancid: $(top_builddir)/config.status $(srcdir)/agmrancid.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
+allogin: $(top_builddir)/config.status $(srcdir)/allogin.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 alogin: $(top_builddir)/config.status $(srcdir)/alogin.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
