outline of timos module

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -10,7 +10,7 @@ my_pkglibdir = $(pkglibdir)
 my_pkglib_DATA = rancid.pm acos.pm aeos.pm arbor.pm bigip.pm ciscowlc.pm \
 		 dell.pm edgemax.pm edgerouter.pm eos.pm exos.pm foundry.pm \
 		 ios.pm iosshtech.pm iosxr.pm junos.pm mrv.pm nxos.pm \
-		 panos.pm rbt.pm wavesvros.pm
+		 panos.pm rbt.pm timos.pm wavesvros.pm
 pkglib_in = $(my_pkglib_DATA:%=%.in)
 
 RANLIB= :
