iossb.pm: Cisco small business rancid module WiP

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -9,7 +9,7 @@ AUTOMAKE_OPTIONS=foreign no-dependencies
 my_pkglibdir = $(pkglibdir)
 my_pkglib_DATA = rancid.pm acos.pm aeos.pm arbor.pm bigip.pm ciscowlc.pm \
 		 dell.pm edgemax.pm edgerouter.pm exos.pm foundry.pm \
-		 ios.pm iosshtech.pm iosxr.pm junos.pm mrv.pm nxos.pm \
+		 ios.pm iossb.pm iosshtech.pm iosxr.pm junos.pm mrv.pm nxos.pm \
 		 panos.pm rbt.pm timos.pm wavesvros.pm
 pkglib_in = $(my_pkglib_DATA:%=%.in)
 
@@ -65,6 +65,7 @@ edgerouter.pm: edgerouter.pm.in
 exos.pm: exos.pm.in
 foundry.pm: foundry.pm.in
 ios.pm: ios.pm.in
+iossb.pm: iossb.pm.in
 iosshtech.pm: iosshtech.pm.in
 iosxr.pm: iosxr.pm.in
 junos.pm: junos.pm.in
